<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/maincolor"
    android:id="@+id/ListContainer"
    android:elevation="10dp"
    android:layout_margin="4dp"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/FoodTitle"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/maincolor"
            android:fontFamily="serif"
            android:shadowColor="@color/maincolor"
            android:singleLine="false"
            android:text="@string/food_name"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/FoodImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="4dp"
            android:background="@color/maincolor"
            android:backgroundTintMode="add"
            android:contentDescription="@string/FoodPhoto"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/maincolor"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/like_photo"
                    android:src="@drawable/ic_like"
                    app:tint="@color/textcolor" />

                <TextView
                    android:id="@+id/text_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/people_liked"
                    android:textColor="@color/textcolor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/maincolor"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/merides_photo"
                    android:src="@drawable/ic_face"
                    app:tint="@color/textcolor" />

                <TextView
                    android:id="@+id/text_merides"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/text_merides"
                    android:textColor="@color/textcolor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>