<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/maincolor"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageviewlogin"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:fontFamily="cursive"
        android:src="@mipmap/foodys_transparent_foreground"
        android:textAlignment="center"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:autofillHints=""
        android:hint="@string/user_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:layout_below="@+id/username1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:layout_below="@+id/password1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/textcolor"
        android:text="@string/sign_in" />
</RelativeLayout>