<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/maincolor"
    tools:context=".Details">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/MealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/meal_name"
                android:textColor="@color/textcolor"
                android:textSize="22sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/MealSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/source"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/SneakaPeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Sneak A Peak"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/MealImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/food_photograph"
                android:scaleType="centerCrop" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/InstructionsMeals"
                android:background="@color/maincolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:text="@string/ingredients"
                android:textStyle="italic"
                android:textSize="16sp"
                android:padding="8dp"
                android:gravity="center"
                android:textColor="@color/textcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/MealIngredients"
                android:background="@color/maincolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/similar_meals"
                android:textColor="@color/textcolor"
                android:textSize="16sp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/SimilarMeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</androidx.core.widget.NestedScrollView>